#15 upload logo tournament or photo player
