# docs/swagger.json
@@ -1,11 +1,11 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "This is a sample server celler server.",
-        "title": "Swagger Example API",
+        "description": "sport-space api documentation",
+        "title": "SportSpace API",
         "termsOfService": "http://swagger.io/terms/",
         "contact": {},
-        "version": "1.0"
+        "version": "0.0.1"
     },
     "host": "localhost:8080",
     "basePath": "/api/v1",
@@ -260,6 +260,47 @@
                         "schema": {
                             "$ref": "#/definitions/rest.tPlayer"
                         }
+                    },
+                    "204": {
+                        "description": "No Content"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
+        "/user/players/{player_id}/upload": {
+            "put": {
+                "description": "загрузка файлов игрока",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user players"
+                ],
+                "summary": "загрузка файлов игрока",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "player id",
+                        "name": "player_id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "file",
+                        "description": "фотография",
+                        "name": "photo_file",
+                        "in": "formData"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
                     },
                     "204": {
                         "description": "No Content"
@@ -875,6 +916,50 @@
                     }
                 }
             }
+        },
+        "/user/tournaments/{tournament_id}/upload": {
+            "put": {
+                "description": "загрузка файлов турнира",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user tournament"
+                ],
+                "summary": "загрузка файлов турнира",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "tournament id",
+                        "name": "tournament_id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "file",
+                        "description": "файл лого",
+                        "name": "logo_file",
+                        "in": "formData"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "204": {
+                        "description": "No Content"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -1093,6 +1178,9 @@
                 "lastname": {
                     "type": "string"
                 },
+                "photo_url": {
+                    "type": "string"
+                },
                 "secondname": {
                     "type": "string"
                 }
@@ -1122,6 +1210,9 @@
             "properties": {
                 "id": {
                     "type": "integer"
+                },
+                "logo_url": {
+                    "type": "string"
                 },
                 "title": {
                     "type": "string"
